# SuppliFIT

./: PLANNING.md  README.md  TASK.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  design_patterns.md  manage.py  pyproject.toml  wait-for-it.sh
backend/core/: db_connection.py
backend/partner_stores/: admin.py  apps.py  factories.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/partner_stores/migrations/: 0001_initial.py
backend/partner_stores/services/: commission_strategy.py  store_factory.py  store_service.py
backend/partner_stores/tests/: test_models.py
backend/subscription_plans/: factories.py  urls.py
backend/subscription_plans/models/: __init__.py  subscription.py  subscription_plan.py
backend/subscription_plans/serializers/: __init__.py  subscription_plans_serializers.py
backend/subscription_plans/services/: __init__.py  subscription_service.py
backend/subscription_plans/viewsets/: __init__.py  subscription_plan_viewset.py  subscription_viewset.py
backend/supplements/: admin.py  apps.py  urls.py
backend/supplements/models/: __init__.py  supplement.py
backend/supplements/serializers/: __init__.py  supplement_serializers.py
backend/supplements/viewsets/: __init__.py  supplement_viewsets.py
backend/supplifit/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: factories.py  urls.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: __init__.py  user.py
backend/users/serializers/: __init__.py  users_serializers.py
backend/users/services/: __init__.py  user_service.py
(+49 files in other folders)
